NEW290790
REGRESSION(285687@main): [ iOS ] editing/selection/ios/show-selection-in-transformed-container.html is a constant failure.
https://bugs.webkit.org/show_bug.cgi?id=290790
Summary REGRESSION(285687@main): [ iOS ] editing/selection/ios/show-selection-in-tran...
Yasmin Karimi
Reported 2025-03-31 13:27:59 PDT
editing/selection/ios/show-selection-in-transformed-container.html This test is a constant failure on iOS Debug. HISTORY: https://results.webkit.org/?suite=layout-tests&test=editing%2Fselection%2Fios%2Fshow-selection-in-transformed-container.html TEXT DIFF: @@ -6,10 +6,11 @@ On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE". PASS caretBefore.top is caretAfter.top -PASS caretBefore.left is caretAfter.left -PASS caretBefore.width is caretAfter.width +FAIL caretBefore.left should be 17. Was 18. +FAIL caretBefore.width should be 3. Was 2. PASS caretBefore.height is caretAfter.height PASS successfullyParsed is true +Some tests failed. TEST COMPLETE DIFF URL: https://build.webkit.org/results/Apple-iPadOS-18-Simulator-Debug-WK2-Tests/292920@main%20(605)/editing/selection/ios/show-selection-in-transformed-container-pretty-diff.html REPRODUCIBILITY: I was unable to reproduce on the iOS 18.2 simulator. REGRESSION: Contextual information indicates the probable regression point is 285687@main. The code paths changed in that commit appear to be directly related to the observed regression test failure. This shows the regression more clearly: https://results.webkit.org/?suite=layout-tests&test=editing%2Fselection%2Fios%2Fshow-selection-in-transformed-container.html&recent=false&version_name=iOS%2018&version_name=iOS%2017
Attachments
Radar WebKit Bug Importer
Comment 1 2025-03-31 13:28:17 PDT
EWS
Comment 2 2025-03-31 13:46:16 PDT
Test gardening commit 292959@main (667a1dcf7694): <https://commits.webkit.org/292959@main> Reviewed commits have been landed. Closing PR #43343 and removing active labels.
Wenson Hsieh
Comment 3 2025-03-31 15:59:42 PDT
Note You need to log in before you can comment on or make changes to this bug.