REGRESSION(285687@main): [ iOS ] editing/selection/ios/show-selection-in-transformed-container.html is a constant failure. https://bugs.webkit.org/show_bug.cgi?id=290790 rdar://148272125

Reviewed by NOBODY (OOPS!).

WIP for EWS — see which tests break (or need to be rebaselined).

* Source/WebCore/editing/Editing.cpp:
(WebCore::absoluteBoundsForLocalCaretRect):